# CMakeList.txt : CMake project for 2DClothSim, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("2DClothSim")

# Add source to this project's executable.
add_executable (2DClothSim "2DClothSim.cpp" "2DClothSim.h")

# TODO: Add tests and install targets if needed.
